[package]
name = "kda_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
hyper = { version="0.14.11", features=["server", "http2", "tcp"]}
tokio = { version = "1", features = ["full"] }
rouille = "3.2.1"
serde = "1.0.126"
serde_json = "1.0.64"
surf = "2.2.0"